--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="amazon_link_not_matching">Sorry, no Amazon link found. Triple Camel will work only sharing an Amazon URL.</string>
     <string name="no_web_browser">Sorry, no suitable app found to open an URL.</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
