--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,9 @@
     <string name="action_settings">Settings</string>
     <string name="amazon_link_not_matching">Sorry, no Amazon link found. Triple Camel will work only sharing an Amazon URL.</string>
     <string name="no_web_browser">Sorry, no suitable app found to open an URL.</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="about_this_app"><![CDATA[<p><big>Hi! This is the information page about Triple Camel.</big></p>
+    <p>This app works by sharing a product from the Amazon app, and by choosing Triple Camel as the sharing app from the list.</p>
+    <p>If you run this app from the app menu, you will see this information page and nothing more will happen.</p>
+    <p><small>Icon made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed under <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></small></p>]]></string>
 
 </resources>
