--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -7,8 +7,12 @@
     <string name="amazon_link_not_matching">Siamo spiacenti, ma non sono stati trovati link di Amazon. Triple Camel funziona solo se condividi un URL di Amazon.</string>
     <string name="no_web_browser">Siamo spiacenti, ma non è stata trovata nessuna app adatta ad aprire un URL.</string>
     <string name="about_this_app"><![CDATA[<p><big>Ciao! Questa è la pagina di informazioni su Triple Camel.</big></p>
+    <p>Controlla in un attimo l\'andamento del prezzo di un prodotto su Amazon grazie a CamelCamelCamel.</p>
     <p>Questa app funziona quando condividi un prodotto dall\'app di Amazon e selezioni Triple Camel dall\'elenco delle app con cui condividere il prodotto.</p>
     <p>Se lanci Triple Camel dal menu delle app, ti comparirà questa pagina di informazioni e nient\'altro.</p>
+    <p>Questa app non è affiliata a CamelCamelCamel. Per ulteriori informazioni, visita il loro <a href="http://it.camelcamelcamel.com/">sito</a>.</p>
+    <p>L\'autore di questa app è Ermanno Baschiera (ebaschiera@gmail.com). Questo software è rilasciato con licenza GPLv2.</p>
+    <p>TripleCamel website: <a href="https://github.com/ebaschiera/TripleCamel">https://github.com/ebaschiera/TripleCamel</a></p>
     <p><small>Icon made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed under <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></small></p>]]></string>
 
 </resources>
