--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,12 @@
     <string name="amazon_link_not_matching">Sorry, no Amazon link found. Triple Camel will work only sharing an Amazon URL.</string>
     <string name="no_web_browser">Sorry, no suitable app found to open an URL.</string>
     <string name="about_this_app"><![CDATA[<p><big>Hi! This is the information page about Triple Camel.</big></p>
+    <p>Check the price history of an Amazon product on CamelCamelCamel in no time!</p>
     <p>This app works by sharing a product from the Amazon app, and by choosing Triple Camel as the sharing app from the list.</p>
     <p>If you run this app from the app menu, you will see this information page and nothing more will happen.</p>
+    <p>This app is not affiliated with CamelCamelCamel. For more information, visit their <a href="http://camelcamelcamel.com/">website</a>.</p>
+    <p>This app has been developed by Ermanno Baschiera (ebaschiera@gmail.com). This software is GPLv2.</p>
+    <p>TripleCamel website: <a href="https://github.com/ebaschiera/TripleCamel">https://github.com/ebaschiera/TripleCamel</a></p>
     <p><small>Icon made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed under <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></small></p>]]></string>
 
 </resources>
