--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -8,7 +8,7 @@
     <string name="no_web_browser">Lo sentimos, pero no se ha encontrado ninguna aplicación que abra una URL.</string>
     <string name="about_this_app"><![CDATA[<p><big>Hola! Esta es la página de información sobre TripleCamel.</big></p>
     <p>Comprueba al instante la evolución de precio de un producto en Amazon gracias a CamelCamelCamel.</p>
-    <p>Esta aplicación funciona así: mostrar un producto en la aplicación de Amazon, pulsar el botón Compartir y seleccionar TripleCamel de la lista de aplicaciones con la que se compartirá el producto. Serás llevado a CamelCamelCamel directamente en la pestaña de ese producto. ¡Nada más!
+    <p>Esta aplicación funciona así: mostrar un producto en la aplicación de Amazon, pulsar el botón Compartir y seleccionar TripleCamel de la lista de aplicaciones con la que se compartirá el producto. Serás llevado a CamelCamelCamel directamente en la pestaña de ese producto. ¡Nada más!</p>
     <p>Si lanzas TripleCamel desde el menú de aplicaciones, verás esta página de información y nada más.</p>
     <p>Esta aplicación no está afiliada a CamelCamelCamel. Para más información, visite su sitio web <a href="http://es.camelcamelcamel.com/"></a>.</p>.
     <p>El autor de esta aplicación es Ermanno Baschiera (ebaschiera@gmail.com). Este software se publica bajo la licencia GPLv3.</p>.
